# CompSP

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: README.md  ofa_jbb_example.sh  ranking_example.sh
data/: README.md  asr_datasets.json  asr数据
data_ana/: README.md
docs/: README.md  asr_data.md  asr_validation_report_full.json  asr_validation_report_sample1.json  asr_validation_report_sample3.json  asr_validation_summary.md  data_index.md  experiment_map.md  model_index.md  prefix-zero三视图对照说明.md  pseudo_safety_learnability.md  safety_linear_paper_notes.md  safety_linear_structure_research_plan.md  source_audit.md  whitebox_compsp_error_alignment_experiment.md  whitebox_llama_alignment_first_run.md  代码与实验逻辑审计.md  回答内容与安全结构关联实验.md  安全结构实验可信度审计与止损建议_2026-07-13.md  安全结构研究TODO.md  安全结构研究周报_周起始2026-07-06_最后维护2026-07-12.md  安全结构研究总计划.md  安全结构研究简报_2026-07-12.md  安全结构研究讨论.md  实验结果价值排序与汇报主线_2026-07-14.md  待确认问题.md  长期研究计划.md  黑盒观测内部安全结构研究框架_2026-07-14.md
scripts/: README.md  analyze_asr_resolution_limits.py  analyze_composition_controlled_response_gain.py  analyze_length_matched_pairs.py  analyze_natural_prefix_conditional_permutation.py  analyze_natural_prefix_incremental_response_gain.py  analyze_natural_prefix_whitebox_proxy_gain.py  analyze_prefix_zero_hidden_risk.py  analyze_prefix_zero_semantic_svd.py  analyze_response_hidden_embeddings.py  analyze_response_length_strata.py  analyze_response_residual_signal.py  analyze_response_safety_structure.py  analyze_whitebox_compsp_alignment.py  audit_response_residual_tfidf_terms.py  run_bt_rank.py  (+48 more)
(+1238 files in other folders)
