[project]
name = "tidy-compsp"
version = "0.1.0"
description = "Clean research utilities for OFA and CompSP experiments"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "numpy",
  "scipy",
  "scikit-learn",
]

[project.optional-dependencies]
ranking = ["torch", "transformers", "peft", "datasets", "tqdm"]

[tool.ruff]
line-length = 120
